--- a/sports_predictions/index.html
+++ b/sports_predictions/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/src/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sports Predictions</title>
 
-    <!-- Tailwind (optional, remove if using plain CSS) -->
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body>
